# hometrackertool

./: .env.local  README.md  REAME.md  main.py  pyproject.toml
doc/db_schemas/: hometrackertool.drawio
hometrackertool/backend/: README.md  db.sqlite3  index.py
hometrackertool/backend/backend/: asgi.py  settings.py  urls.py
hometrackertool/backend/backend/fn/: test.py
hometrackertool/backend/backend/wifi/: README.md  setup.sh
hometrackertool/backend/core/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
hometrackertool/backend/core/migrations/: 0001_initial.py  0002_auto_20220511_1242.py  0003_auto_20220511_1245.py  0004_alter_profile_enable.py
hometrackertool/frontend/: index.py  package-lock.json  package.json  tailwind.config.js
hometrackertool/frontend/public/: index.html
hometrackertool/frontend/src/: routes.js
hometrackertool/frontend/src/components/Layout/: dashboard.js
hometrackertool/frontend/src/pages/Dashboard/: about.js  integrations.js  overview.js  profiles.js  rule_chains.js  scheduler.js  settings.js
hometrackertool/frontend/src/pages/Login/: index.js
hometrackertool/frontend/src/pages/Overview/: index.js
hometrackertool/frontend/src/services/: api.js
install/: README.md  conf_apache.sh  conf_mosquitto.sh  conf_postgres.sh  essentials_programs.sh  install_main.sh  setup.sh  startup_systemd.sh
install/template/: apache_hometrackertool.txt
tests/: test_hometrackertool.py
